Updated index.html file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 
 <h1> Working with Branches using GIT Commands </h1>
+<h2> Adding New Header in the PATCH-1-ADDING -HEADER branch </h2>
+<h3> Welcome to Egypt y Welad el wes5a!! </h3>
 
 <ul>
     <l1>Creating Branches </li>
